# rosalind

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parser.cpp  rosalind.cpp  rosalind.h  solver.cpp  solver.h
assets/: BLOSUM62
solver/: abstract_solver.cpp  abstract_solver.h  alignment_solver.cpp  alignment_solver.h  assembly_solver.cpp  assembly_solver.h  common_solver.cpp  common_solver.h  recombination_solver.cpp  recombination_solver.h  rosalind.cpp  rosalind.h  trees_solver.cpp  trees_solver.h
